update styles related to prevent horizontal overflow on mobile devices

--- a/css-build/imports/max-width-767.less
+++ b/css-build/imports/max-width-767.less
@@ -125,7 +125,7 @@
 
   // Center the page content on handheld views
   .entry-content {
-    min-width: 320px;
+    min-width: 300px;
     margin: 0 auto;
   }
 
