--- a/css-build/style.css
+++ b/css-build/style.css
@@ -547,7 +547,7 @@ a:visited {
     color: #fff;
   }
   .entry-content {
-    min-width: 320px;
+    min-width: 300px;
     margin: 0 auto;
   }
   .home .site-main {
